fix menu on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1082,15 +1082,30 @@
     left: 0;
     top: 0;
   }
-  body.noScroll::after {
+  body::after {
     content: "";
     position: fixed;
     width: 100%;
+    height: 0;
+    background: red;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    -webkit-transition: all 0.45s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    -o-transition: all 0.45s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+    transition: all 0.45s cubic-bezier(0.25, 0.8, 0.25, 1) 0s;
+  }
+  body.noScroll::after {
+    content: "";
     height: 100%;
     background: red;
     z-index: 0;
     top: 0;
-    left: 0
+    left: 0;
+    -webkit-transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
+    -o-transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
+    transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
   }
   .main-header {
     padding: 10px 0;
